--- a/gb/9/9/2/n2644174.md
+++ b/gb/9/9/2/n2644174.md
@@ -1,16 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vwrizb2199/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vwrizb2199/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vwrizb2199/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vwrizb2199/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>探索太空　澳8千万元建顶级计算中心</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2009/09/909020156021341-600x400.png" />
-<h6>波西计算中心所在地示意图。（西澳政府提供）
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元9月2日讯】（大纪元记者李晓宇、高旻<ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>珀斯综合报导）8月27日，澳洲联邦革新、工业、科学与研究部长卡尔（Kim Carr）宣布，价值8千万澳元的高性能超级计算机处理中心在西澳本特里科技园（Bentley&#8217;s Technology Park.）破土动工，为澳纽联手竞标25亿澳元的国际<ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E5%A4%A9%E6%96%87.md#1">天文</a>学项目——平方公里阵（SKA）射电望远镜阵列迈出重要一步，中心取名为波西高性能平方千米阵科学计算中心（Pawsey High-Performance Computing Centre for SKA Science），简称波西中心。中心建成后将用于处理平方千米阵巨型射电望远镜从宇宙空间采集的庞大数据。</p>
+	<p>【大纪元9月2日讯】（大纪元记者李晓宇、高旻<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>珀斯综合报导）8月27日，澳洲联邦革新、工业、科学与研究部长卡尔（Kim Carr）宣布，价值8千万澳元的高性能超级计算机处理中心在西澳本特里科技园（Bentley&#8217;s Technology Park.）破土动工，为澳纽联手竞标25亿澳元的国际<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A9%E6%96%87.md#1">天文</a>学项目——平方公里阵（SKA）射电望远镜阵列迈出重要一步，中心取名为波西高性能平方千米阵科学计算中心（Pawsey High-Performance Computing Centre for SKA Science），简称波西中心。中心建成后将用于处理平方千米阵巨型射电望远镜从宇宙空间采集的庞大数据。</p>
 <p><B>巨型射电望远镜阵探索宇宙生命</B></p>
 <p>平方千米阵（Square Kilometre Array，缩写为SKA）是计划中的下一代巨型射电望远镜阵列，在0.10–25GHz的波段之间工作，有效接收面积可以达到大约1平方千米，灵敏度将比目前世界上最大的射电望远镜还要高50倍。</p>
 <p>平方千米阵将由上千台天线组成，覆盖数千公里的范围，呈螺旋形排列。平方千米阵预计能够探测到宇宙大爆炸之后第一代恒星和星系形成时发出的电磁波、揭示磁场在恒星和星系演化过程中的作用、探测暗能量产生的种种效应，并可能接收到外星生命发出的无线电信号。</p>
-<p>平方千米阵计划始于1993年。在国际无线电科联在日本京都举行的大会上，10个国家的<ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E5%A4%A9%E6%96%87.md#1">天文</a>学家联合提议建造接受面积为1平方千米的巨型射电望远镜阵，目前已经有19个国家加入这个项目，这是一个大规模的、新生代的射电望远镜，它所探索的潜在宇宙范围将大于现有设备的10000倍。它是世界上最重要的特大型科学工程之一。<br />项目初期选址有澳大利亚、南非、中国、阿根廷四个国家参加了角逐。2006年9月，中国和阿根廷的方案分别由于地理条件以及电离层不稳定而遭到否决。剩下南非与<ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>两相角逐，最后花落谁家可能要到2012年才能见分晓。这个项目的主要目的之一是探索宇宙以及尝试在外太空寻找智慧生命。</p>
+<p>平方千米阵计划始于1993年。在国际无线电科联在日本京都举行的大会上，10个国家的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A9%E6%96%87.md#1">天文</a>学家联合提议建造接受面积为1平方千米的巨型射电望远镜阵，目前已经有19个国家加入这个项目，这是一个大规模的、新生代的射电望远镜，它所探索的潜在宇宙范围将大于现有设备的10000倍。它是世界上最重要的特大型科学工程之一。<br />项目初期选址有澳大利亚、南非、中国、阿根廷四个国家参加了角逐。2006年9月，中国和阿根廷的方案分别由于地理条件以及电离层不稳定而遭到否决。剩下南非与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>两相角逐，最后花落谁家可能要到2012年才能见分晓。这个项目的主要目的之一是探索宇宙以及尝试在外太空寻找智慧生命。</p>
 <p><B>西澳得天独厚联手新西兰与南非竞标</B></p>
 <p>接受外太空电波需要安静没有干扰的环境，而西澳地广人稀，非常符合这一要求，澳洲最核心的射电望远镜选址在西澳杰拉尔顿（Geraldton）东北部300公里处。</p>
 <p>2009年8月20日，新西兰加入澳大利亚组成21世纪的澳纽军团，参与对平方千米阵项目的竞标。新西兰经济发展部长布朗利（Gerry Brownlee）说：“签署这项合作协议，向国际社会发出了一个强烈的信号，那就是澳、纽两国都致力于支持平方千米阵相关的产业机遇，同时促进澳大利亚和新西兰相关产业的能力。从新西兰的角度来看，这项协议将成为澳纽产业之间、特别是高新技术产业方面建立强大联系和合作的里程碑。平方千米阵项目有望成为21世纪世界顶级科技项目，利用世界上最强大的计算机之一，探索科学的基本问题。”</p>
@@ -42,36 +41,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/9/7/31/n2608430.md#1">澳洲气候局：9到11月太平洋圣婴气象成形</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/9/8/31/n2642196.md#1">天文蛋 陨石 天体与人间奇妙的感应！</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/9/9/1/n2642767.md#1">澳洲推出首辆试产混合型汽车</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/9/9/1/n2642776.md#1">澳洲今冬创史上最暖纪录&nbsp;</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/7/31/n2608430.md#1">澳洲气候局：9到11月太平洋圣婴气象成形</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/8/31/n2642196.md#1">天文蛋 陨石 天体与人间奇妙的感应！</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/9/1/n2642767.md#1">澳洲推出首辆试产混合型汽车</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/9/1/n2642776.md#1">澳洲今冬创史上最暖纪录&nbsp;</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11263424.md#1" target="_blank">【征文】刘晓：古代侠士与侠义精神</a></li><li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437477.md#1" target="_blank">世纪正邪之战 美国总统及各级政要支持法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/13/n10214702.md#1" target="_blank">中共淫乱的前生今世（1）马列斯毛</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11977635.md#1">美发言人回击华春莹：习总书记讲媒体姓党</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11977140.md#1">台湾确诊者多轻症但住院久 张上淳解密</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11975414.md#1">大陆知情医生：中共病毒只能靠自愈</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/27/n11980618.md#1">江西拒湖北人入境 两省公安混战警车被掀翻</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11977926.md#1">四川公民赵凯公开呼吁“解散共产党”</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11976245.md#1">墨西哥男子居家隔离 派小狗去买零食</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11974278.md#1">与高圆圆携女抵上海 赵又廷复工前被强制隔离</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11974983.md#1">疫情下进组复工 赵丽颖租房5个月费用自理</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11974130.md#1">张昆仑：大艺通天</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/18/n11950234.md#1">拥28个博士学位 推展传统舞蹈的黄埔名将何志浩</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/13/2/3/n3792263.md#1">米开朗基罗（2） 成名作《圣殇》</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vwrizb2199/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vwrizb2199/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/9/2/n2644174.htm">探索太空　澳8千万元建顶级计算中心</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/9/2/n2644174.htm">探索太空　澳8千万元建顶级计算中心</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/vwrizb2199/djy/blob/master/gb/9/9/2/n2644174.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vwrizb2199/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vwrizb2199/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vwrizb2199/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/9/9/2/n2644174.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
